Se creó con Colab

--- a/Tarea_6.ipynb
+++ b/Tarea_6.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO64vW7seCJmJ3hZxhDmcpY",
+      "authorship_tag": "ABX9TyNRYWstMHp/XnFJYAsx0ve5",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -445,13 +445,13 @@
         "\n",
         "    #   Matriz con números aleatorios del 1 al 20\n",
         "    T = np.random.randint(1, 21, (n, m))\n",
-        "    print(\"\\nMatriz generada T:\\n\", T, \"\\n\")\n",
+        "    print(\"Matriz generada T:\\n\", T, \"\\n\")\n",
         "\n",
         "    #Primera fila al revés\n",
         "    print(\"Primera fila en orden inverso:\", T[0, ::-1])\n",
         "\n",
         "    #Primera columna en orden inverso\n",
-        "    print(\"Primera columna en orden inverso:\", T[::-1, 0])\n",
+        "    print(\"Primera columna en orden inverso:\\n\", T[::-1, 0])\n",
         "\n",
         "    #Primer y último elemento\n",
         "    print(\"Primer elemento:\", T[0, 0])\n",
@@ -485,12 +485,12 @@
         "\n",
         "    # Promedios de filas y columnas\n",
         "\n",
-        "    print(\"\\nPromedio de cada fila:\", T.mean(axis=1))\n",
-        "    print(\"Promedio de cada columna:\", T.mean(axis=0))\n",
+        "    print(\"\\nPromedio de cada fila:\", T.mean(axis=1)) #.mean axis=1 es por filas\n",
+        "    print(\"Promedio de cada columna:\", T.mean(axis=0))  #.mean axis=0 es por columnas\n",
         "\n",
         "    #Antidiagonal y su promedio\n",
         "\n",
-        "    antidiagonal = np.fliplr(T).diagonal()\n",
+        "    antidiagonal = np.fliplr(T).diagonal() #.fliplr voltea la matriz horizontalmente\n",
         "    print(\"\\nAntidiagonal:\", antidiagonal)\n",
         "    print(\"Promedio de la antidiagonal:\", antidiagonal.mean())\n",
         "\n",
@@ -501,9 +501,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Tenrp1FX7Gvr",
-        "outputId": "c4094680-790c-420d-b3f1-f97ed4319027"
+        "outputId": "b2c4a3ed-601f-414d-eff3-a7d3f3fa3a4c"
       },
-      "execution_count": 18,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "stream",
@@ -511,36 +511,36 @@
           "text": [
             "Ingrese el número de filas (3 a 5): 4\n",
             "Ingrese el número de columnas (3 a 5): 4\n",
-            "\n",
             "Matriz generada T:\n",
-            " [[18 20 17 19]\n",
-            " [13 14 18  3]\n",
-            " [ 7  8 17 10]\n",
-            " [ 9  1  1  4]] \n",
+            " [[15 10 12 15]\n",
+            " [15  6  8 13]\n",
+            " [14  4 13  4]\n",
+            " [20 13 13 13]] \n",
             "\n",
-            "Primera fila en orden inverso: [19 17 20 18]\n",
-            "Primera columna en orden inverso: [ 9  7 13 18]\n",
-            "Primer elemento: 18\n",
-            "Último elemento: 4\n",
+            "Primera fila en orden inverso: [15 12 10 15]\n",
+            "Primera columna en orden inverso:\n",
+            " [20 14 15 15]\n",
+            "Primer elemento: 15\n",
+            "Último elemento: 13\n",
             "\n",
-            "Diagonal: [18 14 17  4]\n",
-            "Máximo de la diagonal: 18\n",
-            "Mínimo de la diagonal: 4\n",
-            "Promedio de la diagonal: 13.25\n",
-            "Traza (suma de la diagonal): 53\n",
+            "Diagonal: [15  6 13 13]\n",
+            "Máximo de la diagonal: 15\n",
+            "Mínimo de la diagonal: 6\n",
+            "Promedio de la diagonal: 11.75\n",
+            "Traza (suma de la diagonal): 47\n",
             "\n",
-            "Suma de la primera fila: 74\n",
-            "Suma de la última columna: 36\n",
-            "Suma total (primera fila + última columna): 110\n",
+            "Suma de la primera fila: 52\n",
+            "Suma de la última columna: 45\n",
+            "Suma total (primera fila + última columna): 97\n",
             "\n",
-            "Suma de elementos pares: 92\n",
-            "Suma de elementos impares: 87\n",
+            "Suma de elementos pares: 78\n",
+            "Suma de elementos impares: 110\n",
             "\n",
-            "Promedio de cada fila: [18.5  12.   10.5   3.75]\n",
-            "Promedio de cada columna: [11.75 10.75 13.25  9.  ]\n",
+            "Promedio de cada fila: [13.   10.5   8.75 14.75]\n",
+            "Promedio de cada columna: [16.    8.25 11.5  11.25]\n",
             "\n",
-            "Antidiagonal: [19 18  8  9]\n",
-            "Promedio de la antidiagonal: 13.5\n"
+            "Antidiagonal: [15  8  4 20]\n",
+            "Promedio de la antidiagonal: 11.75\n"
           ]
         }
       ]
