Se creó con Colab

--- a/Tarea_6.ipynb
+++ b/Tarea_6.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNRYWstMHp/XnFJYAsx0ve5",
+      "authorship_tag": "ABX9TyO7xIQOMO0cXmTCzJLY5klN",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -556,7 +556,7 @@
         "x = np.linspace(-5, 5, 500) #500 pareciar mejor los valores\n",
         "\n",
         "def solucion(x, C):\n",
-        "    return (x - 1) + C * np.exp(-x)\n",
+        "    return (x - 1) + C * np.exp(-x) #función exponencial\n",
         "\n",
         "# Valores para C:\n",
         "\n",
@@ -569,7 +569,7 @@
         "plt.figure(figsize=(8, 5))\n",
         "\n",
         "# Graficar cada curva según su valor de C\n",
-        "for C, color, label in zip(Cs, colores, etiquetas):\n",
+        "for C, color, label in zip(Cs, colores, etiquetas): #zip: para recorrer varias listas al mismo tiempo.\n",
         "    y = solucion(x, C)\n",
         "    plt.plot(x, y, color=color, label=label)\n",
         "\n",
@@ -617,7 +617,7 @@
         "x = np.linspace(-10, 10, 1500)\n",
         "\n",
         "# Eliminar los puntos donde x se acerca demasiado a ±2\n",
-        "x_filtered = x[(np.abs(x - 2) > 0.02) & (np.abs(x + 2) > 0.02)]\n",
+        "x_filtered = x[(np.abs(x - 2) > 0.02) & (np.abs(x + 2) > 0.02)] #.abs valor absoluto.\n",
         "\n",
         "# Calcular f(x) usando el vector filtrado\n",
         "y = f(x_filtered)\n",
@@ -633,7 +633,7 @@
         "#Asíntota horizontal y = 0\n",
         "plt.axhline(0, color=\"green\", linestyle=\"--\", label=\"Asíntota horizontal\")\n",
         "\n",
-        "# imitar el eje\n",
+        "# Limitar el eje\n",
         "plt.ylim(-10, 10)\n",
         "\n",
         "plt.title(\"Gráfica de f(x) = (3x + 7)/(x^2 - 4)\")\n",
